--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       </div>
       <div class="search-content">
         <div class="search-box">
-          <input id="input-search" type="text" placeholder="Buscar...">
+          <input id="input-search" type="text" onkeypress="return onlyNumberKey(event)"  placeholder="Buscar...">
           <button id="btn-search"class="search-icon">
             <i class="fas fa-search"></i>
           </button>
@@ -129,4 +129,14 @@
     </footer>
     <script src="js/main.js" type="module"></script>
   </body>
+  <script>
+    function onlyNumberKey(evt) {
+          
+        // Only ASCII character in that range allowed
+        var ASCIICode = (evt.which) ? evt.which : evt.keyCode
+        if (ASCIICode > 31 && (ASCIICode < 48 || ASCIICode > 57))
+            return false;
+        return true;
+    }
+  </script>
 </html>
