--- a/index.html
+++ b/index.html
@@ -117,14 +117,29 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="footer-content container">
-        <img src="./assest/isotipo2.png" class="footer-logo">
-  
-        <nav class="footer-nav">
-          <a href="index.html" class="footer-link">Inicio</a>
-          <a href="about.html" class="footer-link">Acerca</a>
-        </nav>
-  
-        <img src="./assest/logotipoNegro.png" >
+        <div class="footer-img">
+          <div>
+            <img src="./assest/isotipo2.png" class="footer-logo">
+          </div>
+          <div>
+            <img src="./assest/logotipoNegro.png" >
+          </div>
+        </div>
+        <div class="footer-links">
+          <div>
+            <a href="index.html" class="footer-link">Inicio</a>  
+          </div>
+          <div>
+            <a href="about.html" class="footer-link">Acerca</a>
+          </div>
+        </div>
+        <div>
+          <ul> 
+            <p><i class="fas fa-map-marker-alt"></i> Centro Comercial El Hobo - oficina 213</p>
+            <p><i class="fas fa-phone-alt"></i> 3102959505</p>
+            <p><i class="fas fa-envelope" ></i> fabiantamayo.abogado@hotmail.com</p>
+          </ul>
+        </div>
       </div>
     </footer>
     <script src="js/main.js" type="module"></script>
